修改数据结构，使用Flow，修改build

--- a/app/src/main/res/layout/dialog_add_contact.xml
+++ b/app/src/main/res/layout/dialog_add_contact.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.limboooo.contactrecorder.repository.room.ProjectViewModel" />
+            type="com.limboooo.contactrecorder.repository.ProjectViewModel" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
