--- a/app/src/main/res/layout/item_contact_detail_card.xml
+++ b/app/src/main/res/layout/item_contact_detail_card.xml
@@ -16,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/money"
+        android:id="@+id/money_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/how_much"
