--- a/app/src/main/res/layout/add_email_view.xml
+++ b/app/src/main/res/layout/add_email_view.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.textfield.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:hint="邮箱">
 
     <com.google.android.material.textfield.MaterialAutoCompleteTextView
         android:id="@+id/email"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="邮箱" />
+        android:layout_height="wrap_content" />
 
 </com.google.android.material.textfield.TextInputLayout>
