--- a/app/src/main/res/layout/add_email_view.xml
+++ b/app/src/main/res/layout/add_email_view.xml
@@ -8,6 +8,7 @@
 
     <com.google.android.material.textfield.MaterialAutoCompleteTextView
         android:id="@+id/email"
+        android:textColor="?attr/colorPrimary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
