--- a/app/src/main/res/layout/add_thing_view.xml
+++ b/app/src/main/res/layout/add_thing_view.xml
@@ -16,6 +16,7 @@
 
         <com.google.android.material.textfield.MaterialAutoCompleteTextView
             android:id="@+id/thing"
+            android:textColor="?attr/colorPrimary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text" />
@@ -37,6 +38,7 @@
             android:id="@+id/money"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="?attr/colorPrimary"
             android:inputType="number" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -55,6 +57,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/time"
             android:layout_width="match_parent"
+            android:textColor="?attr/colorPrimary"
             android:layout_height="wrap_content"
             android:inputType="date" />
 
