--- a/app/src/main/res/layout/card_contact_detail.xml
+++ b/app/src/main/res/layout/card_contact_detail.xml
@@ -35,37 +35,37 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+                <TextView
+                    android:id="@+id/list_empty"
+                    style="@style/TextAppearance.Material3.BodyLarge"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:padding="32dp"
+                    android:text="无内容"
+                    android:visibility="gone" />
+
                 <androidx.appcompat.widget.LinearLayoutCompat
-                    android:id="@+id/content_list"
+                    android:id="@+id/list_container"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/list_empty"
-                        style="@style/TextAppearance.Material3.BodyLarge"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:padding="32dp"
-                        android:visibility="gone"
-                        android:text="无内容" />
-
                     <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/list_received_detail"
+                        android:id="@+id/list_content"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
 
-                </androidx.appcompat.widget.LinearLayoutCompat>
+                    <TextView
+                        android:id="@+id/received_all"
+                        style="?attr/textAppearanceBodyLarge"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:text="累计收到2000元"
+                        android:visibility="visible" />
 
-                <TextView
-                    android:id="@+id/received_all"
-                    style="?attr/textAppearanceBodyLarge"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:visibility="gone"
-                    android:layout_gravity="center_horizontal"
-                    android:text="累计收到2000元" />
+                </androidx.appcompat.widget.LinearLayoutCompat>
 
                 <Button
                     android:id="@+id/add_received_money"
@@ -77,7 +77,6 @@
                     app:icon="@drawable/ic_add" />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
-
 
         </com.google.android.material.card.MaterialCardView>
 
@@ -97,13 +96,13 @@
             style="@style/Widget.Material3.CardView.Outlined"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="gone"
             android:padding="16dp"
+            android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/show_paid">
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/list_paid"
+                android:id="@+id/list_back"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
