--- a/app/src/main/res/layout/dialog_add_contact.xml
+++ b/app/src/main/res/layout/dialog_add_contact.xml
@@ -49,15 +49,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/name"
-                    android:textColor="?attr/colorPrimary"
-                    android:inputType="text" />
+                    android:inputType="text"
+                    android:textColor="?attr/colorPrimary" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="48dp"
                 android:text="@string/additional_information"
                 android:textColor="?attr/colorPrimary" />
 
@@ -68,13 +68,14 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/email_list"
+                android:layout_marginTop="24dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="48dp"
                 android:text="收到的"
                 android:textColor="?attr/colorPrimary" />
 
@@ -86,8 +87,9 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="给出的" />
+                android:layout_marginTop="48dp"
+                android:text="给出的"
+                android:textColor="?attr/colorPrimary" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/gave_list"
