--- a/app/src/main/res/menu/detail_page_menu.xml
+++ b/app/src/main/res/menu/detail_page_menu.xml
@@ -1,24 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <item
         android:id="@+id/save"
-        android:contentDescription="保存已修改内容"
-        android:icon="@drawable/ic_delete"
+        android:contentDescription="保存当前联系人信息"
         app:showAsAction="always"
-        android:title="@string/delete" />
+        android:title="保存修改" />
 
     <item
         android:id="@+id/delete"
         android:contentDescription="@string/content_description_delete_contact"
-        android:icon="@drawable/ic_delete"
         app:showAsAction="always"
-        android:title="@string/delete" />
+        android:title="删除本联系人" />
 
-<!--    <item-->
-<!--        android:id="@+id/share"-->
-<!--        android:contentDescription="@string/content_description_share_contact"-->
-<!--        android:icon="@drawable/ic_share"-->
-<!--        app:showAsAction="ifRoom"-->
-<!--        android:title="分享该联系人的信息" />-->
 </menu>
